@@ -61,7 +61,7 @@
     <string name="pref_notification_summary">Type of notification to show when an app is granted SU permissions</string>
     <string name="pref_category_info_title">Superuser information</string>
     <string name="pref_version_title">Superuser v%s</string>
-    <string name="pref_version_summary">su v%s</string>
+    <string name="pref_version_summary">su v%s, Database version %s</string>
 
     <string name="notification_text">%s has been granted Superuser permissions</string>
 </resources>
